--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@
     <string name="act_other_account_item_email">Email</string>
     <string name="act_other_account_item_log_out">Log out</string>
     <string name="act_other_account_sure_to_log_out">Apakah anda yakin ingin log out ?</string>
+    <string name="title_activity_activity_weather">ActivityWeather</string>
 </resources>
